# cli

./: .gitignore  .goreleaser.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  main.go  pyproject.toml
.github/workflows/: release.yml
cmd/: config.go  hook.go  insights.go  install.go  root.go  status.go  sync.go  test.go  uninstall.go
configs/claude-code/: hooks.json
configs/cursor/: hooks.json
configs/gemini/: settings.json
internal/adapters/: adapter.go  claudecode.go  cursor.go  gemini.go  registry.go
internal/client/: api.go  config.go  config_test.go
internal/envelope/: envelope.go
internal/git/: context.go
internal/schema/: context.go  events.go  types.go
internal/sync/: claudecode.go  state.go  types.go
internal/transcript/: extractors.go  transcript.go  transcript_test.go
scripts/: install.sh  promptconduit_hook.py
src/promptconduit/: __init__.py  version.py
src/promptconduit/adapters/: __init__.py  base.py  claude_code.py  cursor.py  gemini.py
src/promptconduit/cli/: __init__.py  main.py
src/promptconduit/client/: __init__.py  api.py  config.py
src/promptconduit/schema/: __init__.py  context.py  events.py
