[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptconduit"
version = "0.3.0"
description = "Universal adapters for capturing AI coding assistant prompts and events"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "PromptConduit", email = "hello@promptconduit.dev"}
]
maintainers = [
    {name = "PromptConduit", email = "hello@promptconduit.dev"}
]
keywords = [
    "ai",
    "coding-assistant",
    "claude-code",
    "cursor",
    "gemini",
    "prompt-capture",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://promptconduit.dev"
Documentation = "https://github.com/promptconduit/promptconduit-adapters#readme"
Repository = "https://github.com/promptconduit/promptconduit-adapters"
Issues = "https://github.com/promptconduit/promptconduit-adapters/issues"

[project.scripts]
promptconduit = "promptconduit.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
promptconduit = ["py.typed"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=promptconduit --cov-report=term-missing"
